Fixed some mobile spacing

--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    font-size: 150%;
+    font-size: 100%;
     --maincolor: #181818;
 }
 
@@ -19,16 +19,17 @@ nav li {
 }
 
 nav ul {
-    padding-inline-start: 1rem;
+    padding-inline-start: 1.5rem;
+    font-size: 1.5rem;
 }
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 700;
     line-height: 90%;
     text-transform: uppercase;
     color: var(--maincolor);
     padding-block: 3rem;
-    padding-inline: 1rem;
+    padding-inline: 2.5rem;
 }
 
 h2 {
@@ -37,7 +38,7 @@ h2 {
     line-height: 90%;
     text-transform: uppercase;
     color: var(--maincolor);
-    padding-block-start: 2rem;
+    padding-block-start: 2.5rem;
     padding-block-end: 1rem;
 
 }
@@ -59,6 +60,6 @@ article ol {
     text-transform: uppercase;
     color: var(--maincolor);
     padding-block: 1rem;
-    padding-inline-start: 1rem;
+    padding-inline-start: 2.5rem;
 
 }
